<resources>
    <string name="app_name">Прогноз погоды</string>
    <string name="date_title">Погода на</string>
    <string name="detailedTitle">Погода в других городах:</string>
    <string name="temperatureDetailHeader">Температура: </string>
    <string name="humidityDetailHeader">Влажность: </string>
    <string name="pressureDetailHeader">Давление: </string>
    <string name="humidityToggle">Отобразить влажность</string>
    <string name="pressureToggle">Отобразить давление</string>
    <string name="cityNameHint">Введите название города</string>
    <string name="cityNameEmptyError">Название города не введено</string>
    <string name="empty">Список городов пуст</string>
    <string name="marker_degree">°</string>
    <string-array name="Cities">
        <item>Moscow</item>
        <item>Saint Petersburg</item>
        <item>Yekaterinburg</item>
        <item>Novosibirsk</item>
        <item>Samara</item>
    </string-array>
    <string name="hourlyForecastTitle">Почасовой прогноз</string>
    <string name="action_set_favorite_city">Избранный</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="show_in_f">Отображать в °F</string>
    <string name="show_in_c">Отображать в °C</string>
    <string name="about">О разработчике</string>
    <string name="version">Вер.0.9</string>
    <string name="nearby_temperature_title">Температура с сенсора:</string>
    <string name="nearby_humidity_title">Влажность с сенсора:</string>
    <string name="update">Обновить погоду</string>
    <string name="error_weather_updating">Ошибка загрузки текущей погоды</string>
    <string name="error_forecast_updating">Ошибка загрузки прогноза погоды</string>
    <string name="button_save">Добавить город</string>
    <string name="menu_item_weather_location">Показать погоду в текущем местоположении</string>
    <string name="current_location">Текущее местоположение</string>
</resources>
