<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <item android:title="Weater">
        <menu>
            <group android:checkableBehavior="single">
                <item
                    android:id="@+id/nav_temperature_f"
                    android:title="@string/show_in_f" />
                <item
                    android:id="@+id/nav_temperature_c"
                    android:title="@string/show_in_c" />
            </group>
        </menu>
    </item>

    <item android:title="Communicate">
        <menu>
            <item
                android:id="@+id/about"
                android:icon="@android:drawable/ic_dialog_info"
                android:title="@string/about" />

        </menu>
    </item>

</menu>
