<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    tools:layout_editor_absoluteY="81dp">

    <TextView
        android:id="@+id/dateTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/standard_margin"
        android:text="@string/date_title"
        android:textSize="@dimen/title_text_size"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/temperature"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="@dimen/standard_margin"
        android:layout_marginTop="@dimen/standard_margin"
        android:soundEffectsEnabled="true"
        android:text="@string/temperature"
        android:textSize="@dimen/temp_text_size"
        app:layout_constraintEnd_toEndOf="@+id/dateTitle"
        app:layout_constraintTop_toBottomOf="@+id/dateTitle" />

    <ImageView
        android:id="@+id/imageWeatherConditon"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/standard_margin"
        app:layout_constraintStart_toEndOf="@+id/temperature"
        app:layout_constraintTop_toTopOf="@+id/temperature"
        app:srcCompat="@drawable/rain_s_cloudy" />

    <EditText
        android:id="@+id/cityName"
        android:layout_width="0dp"
        android:layout_height="62dp"
        android:layout_marginEnd="12dp"
        android:layout_marginStart="12dp"
        android:layout_marginTop="@dimen/standard_margin"
        app:layout_constraintEnd_toStartOf="@+id/viewDetailsButton"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/switchHumidity" />

    <TextView
        android:id="@+id/detailedTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="@dimen/standard_margin"
        android:layout_marginStart="@dimen/standard_margin"
        android:layout_marginTop="@dimen/standard_margin"
        android:text="@string/detailedTitle"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/temperature" />

    <Switch
        android:id="@+id/switchPressure"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/standard_margin"
        android:layout_marginTop="@dimen/standard_margin"
        android:text="@string/pressureToggle"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/detailedTitle" />

    <Switch
        android:id="@+id/switchHumidity"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/standard_margin"
        android:layout_marginTop="@dimen/standard_margin"
        android:text="@string/humidityToggle"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/switchPressure" />

    <ImageButton
        android:id="@+id/viewDetailsButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="45dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/cityName"
        app:layout_constraintTop_toTopOf="@+id/cityName"
        app:srcCompat="@android:drawable/ic_menu_search" />

</android.support.constraint.ConstraintLayout>